welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:17: error: unclosed string literal
		}else if (litMessage()=="B'){
                                        ^BDRBuggle:34: error: ';' expected but 'else' found.
}else fini = true;
 ^